welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: '(' expected but identifier found.
  if getCouleurSol()==Color.green {
     ^SlugTracking:10: error: illegal start of simple expression
}        
^